// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template creates with defaults 1`] = `
Array [
  ".gitignore",
  ".prettierrc.js",
  "README.md",
  "lib/index.js",
  "package.json",
  "test/index.spec.js",
]
`;

exports[`template creates with defaults 2`] = `
Object {
  "description": "superb",
  "files": Array [
    "lib",
  ],
  "license": "MIT",
  "name": "dist",
  "version": "0.0.0",
}
`;

exports[`template creates with jest 1`] = `
Object {
  "description": "superb",
  "files": Array [
    "lib",
  ],
  "license": "MIT",
  "name": "dist",
  "scripts": Object {
    "prepare": "npm test",
    "test": "jest",
    "test:coverage": "jest --coverage",
    "test:watch": "jest --watch --notify",
  },
  "version": "0.0.0",
}
`;
